# LLMdoUfrgs

./: QUICKSTART.md  README.md  USAGE_OPTIMIZED.md
vestibular-ufrgs-llm/: .env.example  .gitignore  SETUP_GUIDE.md  pyproject.toml  requirements.txt  setup.py
vestibular-ufrgs-llm/LLMApiaAproach/: llm_client.py  main.py  pipeline.py  utils.py
vestibular-ufrgs-llm/src/: Results (1).json  Results.json  calcular_ac_ufrgs.py  calcular_media_harmonica.py  calcular_media_harmonica_cursos.py  info.json  notasDeCorte.json  pdf_parser.py  pesos.json  verificar_aprovacao.py
vestibular-ufrgs-llm/tests/: test_pipeline.py
